WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38372
Caret may fail to blink if a focus handler brings up a modal dialog
https://bugs.webkit.org/show_bug.cgi?id=38372
Summary
Caret may fail to blink if a focus handler brings up a modal dialog
Jon Honeycutt
Reported
2010-04-29 20:59:11 PDT
If an <input> element has an onfocus handler that brings up a modal dialog, dismissing the modal dialog may leave an unblinking cursor in the input field. <
rdar://problem/7880378
>
Attachments
patch
(8.07 KB, patch)
2010-04-30 01:58 PDT
,
Jon Honeycutt
darin
: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2010-04-30 01:58:10 PDT
Created
attachment 54788
[details]
patch
Jon Honeycutt
Comment 2
2010-04-30 17:50:00 PDT
Landed in
r58625
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug