WebCore/page/EventHandler.h
@@ -147,6 +147,8 @@ public:
 
     bool mouseMoved(const PlatformMouseEvent&);
 
+    void lostMouseCapture();
+
     bool handleMousePressEvent(const PlatformMouseEvent&);
     bool handleMouseMoveEvent(const PlatformMouseEvent&, HitTestResult* hoveredNode = 0);
     bool handleMouseReleaseEvent(const PlatformMouseEvent&);
